# sherpa-technical-task

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  openai_azure_setup.py  pyproject.toml  requirements.txt
src/: clear_objects.py  main.py  store_vectors.py  test_vectors.py
src/api/: __init__.py  main.py
src/api/services/: __init__.py  rag.py
src/evaluation/: generate_eval_questions.py
src/processors/: document_processor.py
src/scripts/: run_trulens_dashboard.py  verify_tenant_access.py  verify_vectors.py
src/tests/: test_multi_tenant.py
src/ui/: app.py
src/utils/: rbac_config.py  utils.py  validation.py  weaviate_setup.py
