[project]
name = "sherpa-technical-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "certifi>=2025.1.31",
    "distro>=1.9.0",
    "fastapi[standard]>=0.115.12",
    "h11>=0.14.0",
    "httpcore>=1.0.8",
    "httpx>=0.28.1",
    "idna>=3.10",
    "jiter>=0.9.0",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "llama-cloud-services>=0.6.12",
    "llama-extract==0.0.5",
    "llama-index>=0.11.23",
    "llama-index-core>=0.11.23",
    "llama-index-readers-file>=0.3.0",
    "markdownify>=1.1.0",
    "openai>=1.74.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250327",
    "pi-heif>=0.22.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "pytesseract>=0.3.13",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "ray>=2.44.1",
    "scalene>=1.5.51",
    "sniffio>=1.3.1",
    "streamlit>=1.44.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
    "unstructured>=0.17.2",
    "unstructured-inference>=0.8.10",
    "unstructured-pytesseract>=0.3.15",
    "uvicorn[standard]>=0.34.1",
    "weaviate-client>=4.13.2",
]
